// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Twitch Chat: Normalizer - Proxy should normalize a Proxied event 1`] = `
Object {
  "anotherProp": true,
  "eventName": "eventName",
  "prop": true,
  "timestamp": 1234,
}
`;

exports[`Twitch Chat: Normalizer - Proxy should normalize an empty Proxied event 1`] = `
Object {
  "timestamp": 1234,
}
`;
